FFM@22: allocation API change